blocks/article-marquee/article-marquee.css
/* Styles for the article marquee component with marquee-straight as the default variation and marquee-curved as the additional variation */
.article-marquee-container {
  padding: 0;
}

.article-marquee-container > div {
  max-width: none;
}

.article-marquee {
  overflow: hidden;
  position: relative;
  background-color: var(--non-spectrum-bg);
}

.article-marquee h1,
.article-marquee h2,
.article-marquee h3,
.article-marquee h4,
.article-marquee h5,
.article-marquee h6 {
  color: var(--non-spectrum-dark-charcoal);
  margin-top: 12px;
}

.article-marquee-info-container {
  display: flex;
  flex-direction: column;
  max-width: var(--default-max-width);
  margin: auto;
  background-color: var(--non-spectrum-bg);
  position: relative;
  z-index: 1;
}

.article-marquee .article-info {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding: 40px 20px;
  position: relative;
  z-index: 2;
  margin-right: -2px;
  background-color: var(--non-spectrum-bg);
}

.article-marquee .author-info {
  display: flex;
  align-items: center;
  flex-direction: column;
  padding: 2em 4em;
  position: relative;
  color: var(--background-color);
  overflow: hidden;
  z-index: 1;
  background-color: var(--non-spectrum-bg);
  min-width: 30%;
}

.article-marquee .author-info > div {
  z-index: 1;
  text-align: center;
}

.article-marquee .author-info.adobe {
  background-color: var(--non-spectrum-adobe-dark-red);
}

.article-marquee .author-info.external {
  background-color: var(--spectrum-gray-900);
}

.article-marquee.marquee-curved .author-info {
  padding: 6em 4em 3em;
  background: none;
}

.article-marquee .author-info .author-card .author-image img {
  height: 100%;
  width: 100%;
  object-fit: cover;
  object-position: center;
  border-radius: 50%;
}

.article-marquee .author-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 28px;
}

.article-marquee .author-card:last-child {
  margin-bottom: 0;
}

.article-marquee .author-info-text {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.article-marquee .author-info .author-card .author-image {
  box-sizing: border-box;
  width: 80px;
  height: 80px;
  border-radius: 50%;
  overflow: hidden;
  border: 2px solid var(--spectrum-gray-900);
  margin-bottom: 10px;
  padding: 5px;
}

.article-marquee .author-info.external .author-card .author-image {
  border: 2px solid var(--spectrum-gray-50);
}

.article-marquee .author-info .author-card .author-info-text .author-name {
  font-size: var(--spectrum-font-size-300);
  font-weight: var(--font-weight-bold);
}

.article-marquee .author-info .author-card .author-info-text .author-title {
  max-width: 256px;
}

.article-marquee .breadcrumb {
  min-height: 25px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.article-marquee .breadcrumb > a,
.article-marquee .breadcrumb > span {
  color: var(--spectrum-gray-700);
  display: inline-block;
  font-size: var(--spectrum-font-size-200);
  line-height: 24px;
  margin: 0;
}

.article-marquee .breadcrumb > a:hover {
  text-decoration: underline;
}

.article-marquee .breadcrumb > span::after,
.article-marquee .breadcrumb > a::after {
  background-image: url('../../icons/chevron_right.svg');
  background-size: 16px;
  bottom: -3px;
  content: '';
  display: inline-block;
  height: 16px;
  margin-right: 5px;
  margin-left: 5px;
  position: relative;
  width: 16px;
}

.article-marquee .breadcrumb > span:last-child::after {
  content: none;
}

.article-marquee .breadcrumb > span {
  display: inline;
  margin-top: 8px;
  color: var(--spectrum-gray-800);
  font-size: var(--spectrum-font-size-200);
  font-weight: var(--font-weight-bold);
}

.article-marquee-info {
  display: flex;
  flex-wrap: wrap;
  margin-top: 1em;
  gap: 1em;
}

.article-marquee-options {
  display: flex;
  width: 100%;
  gap: 10px;
  margin-left: -5px;
  min-width: 48px;
  min-height: 24px;
}

.article-marquee-options .user-actions {
  align-items: flex-start;
  flex-wrap: wrap;
}

.article-marquee-options .user-actions .icon {
  width: 24px;
  height: 24px;
}

.article-marquee-last-updated {
  color: var(--spectrum-gray-700);
}

.article-marquee-read-time {
  display: flex;
  gap: 5px;
  color: var(--spectrum-gray-700);
}

.article-marquee-tag {
  width: max-content;
  color: #000;
  font-size: var(--spectrum-font-size-40);
  font-weight: var(--font-weight-semi-bold);
  padding: 2px 4px;
  margin-top: 1em;
  border-radius: 2px;
  background-color: var(--background-color);
}

.article-marquee-large-bg {
  display: none;
}

.article-marquee .author-info .author-details {
  min-height: 160px;
}

.article-marquee .user-actions .bookmark-label,
.copylink-label {
  padding-left: 10px;
  font-size: var(--spectrum-font-size-200);
}

.article-marquee-ai-translated {
  display: flex;
  gap: 5px;
  color: var(--spectrum-gray-700);
  position: relative;
}

.article-marquee-ai-translated-tooltip-container {
  cursor: pointer;
  display: flex;
  align-items: center;
}

.article-marquee-ai-translated-tooltip-container .icon-info {
  width: 16px;
  height: 16px;
}

.article-marquee-ai-translated-tooltip {
  background-color: var(--spectrum-gray-600);
  border-radius: 4px;
  color: var(--spectrum-gray-50);
  display: none;
  font-size: var(--spectrum-font-size-75);
  font-weight: var(--font-weight-normal);
  padding: 2px 8px 4px;
  position: absolute;
  text-align: center;
  white-space: normal;
  overflow-wrap: break-word;
  max-width: 100px;
  width: max-content;
  z-index: 10;
  line-height: 1.5;
  left: 50%;
  bottom: calc(100% + 8px);
  transform: translateX(-50%);
}

.article-marquee-ai-translated-tooltip::after {
  border-width: 4px;
  border-style: solid;
  content: '';
  position: absolute;
  left: 50%;
  top: 100%;
  margin-left: -4px;
  border-color: var(--spectrum-gray-600) transparent transparent transparent;
}

.article-marquee-ai-translated-tooltip-container:hover .article-marquee-ai-translated-tooltip {
  display: block;
}

.article-marquee .user-actions .bookmark {
  margin-right: 16px;
}

@media (min-width: 600px) {
  .article-marquee-info-container {
    flex-direction: row;
    min-height: auto;
    justify-content: space-between;
  }

  .article-marquee .article-info {
    max-width: 50%;
    min-height: 200px;
    padding: 40px;
    width: 100%;
  }

  .article-marquee .author-info {
    padding: 1em;
    min-width: 35%;
    justify-content: center;
  }

  .article-marquee.marquee-curved .author-info {
    padding: 1em;
  }

  .article-marquee-options {
    width: auto;
    gap: 0;
  }

  .article-marquee .breadcrumb > span {
    display: inline;
    margin-top: 0;
    font-size: var(--spectrum-font-size-200);
  }

  .article-marquee .author-info .author-details {
    margin-left: 0;
  }

  .article-marquee.marquee-curved .author-info .author-details {
    margin-left: 50px;
  }

  .article-marquee .author-card .author-image {
    display: none;
  }

  .article-marquee .author-card:only-child .author-image {
    display: block;
  }

  .article-marquee .user-actions .bookmark-label,
  .copylink-label {
    display: none;
  }

  .article-marquee .user-actions .bookmark {
    margin-right: 0;
  }

  .article-marquee-ai-translated-tooltip-container {
    position: relative;
  }

  .article-marquee-ai-translated {
    position: static;
  }

  .article-marquee-ai-translated-tooltip {
    left: 100%;
    right: auto;
    bottom: 50%;
    transform: translateY(50%);
    margin-bottom: 0;
    margin-left: 10px;
    max-width: 150px;
  }

  .article-marquee-ai-translated-tooltip::after {
    left: -8px;
    right: auto;
    top: 50%;
    transform: translateX(0);
    margin-left: 0;
    margin-top: -4px;
    border-color: transparent var(--spectrum-gray-600) transparent transparent;
  }
}

@media (min-width: 900px) {
  .article-marquee-info-container {
    justify-content: space-between;
  }

  .article-marquee .breadcrumb {
    min-height: 25px;
    margin-bottom: 15px;
  }

  .article-marquee .author-info .author-card .author-info-text .author-name {
    font-size: var(--spectrum-font-size-200);
  }

  .article-marquee.marquee-curved .author-info {
    min-width: 40%;
    overflow: visible;
  }

  .article-marquee .author-info .author-details {
    display: inline-flex;
    gap: 30px;
    width: auto;
    align-items: center;
  }

  .article-marquee .author-info .author-details > :only-child {
    width: 100%;
  }

  .article-marquee.marquee-curved .author-info .author-details {
    margin-left: 124px;
  }

  .article-marquee .author-card {
    margin-bottom: 0;
    width: 50%;
  }

  .article-marquee .author-card .author-image {
    display: block;
  }

  .article-marquee h1,
  .article-marquee h2,
  .article-marquee h3,
  .article-marquee h4,
  .article-marquee h5,
  .article-marquee h6 {
    color: var(--spectrum-gray-900);
  }
}

@media (min-width: 1024px) {
  .article-marquee-large-bg {
    display: block;
    position: absolute;
    inset: 0 0 0 50%;
    background-color: var(--non-spectrum-bg);
  }

  .article-marquee-large-bg.adobe {
    background-color: var(--non-spectrum-adobe-dark-red);
  }

  .article-marquee-large-bg.external {
    background-color: var(--spectrum-gray-900);
  }
}

/* Aricle Marquee background styles */

.article-marquee .author-info .article-marquee-bg-container path:first-child {
  fill: var(--non-spectrum-bg);
}

.article-marquee .author-info.external .article-marquee-bg-container path:first-child {
  fill: var(--spectrum-gray-900);
}

.article-marquee .author-info.adobe .article-marquee-bg-container path:first-child {
  fill: var(--non-spectrum-adobe-dark-red);
}

.article-marquee-bg-mobile {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
}

.article-marquee-bg-tablet,
.article-marquee-bg-desktop {
  display: none;
}

@media (min-width: 600px) {
  .article-marquee-bg-mobile {
    display: none;
  }

  .article-marquee-bg-tablet {
    display: block;
    position: absolute;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 0;
    height: 100%;
  }
}

@media (min-width: 900px) {
  .article-marquee-bg-tablet {
    display: none;
  }

  .article-marquee-bg-desktop {
    display: block;
    position: absolute;
    z-index: -1;
    top: 0;
    bottom: 0;
    left: 0;
    height: 100%;
  }
}

